--- a/BrainFramework.vcxproj.filters
+++ b/BrainFramework.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="src\Simulation.hpp">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\Model.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="demo\Application.cpp">
@@ -88,9 +91,6 @@
     </ClCompile>
     <ClCompile Include="ext\imgui\imgui_demo.cpp">
       <Filter>ext\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="src\BrainFramework.cpp">
-      <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\NeuralNetwork.cpp">
       <Filter>src</Filter>
