--- a/BrainFramework.vcxproj
+++ b/BrainFramework.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="demo\Application.hpp" />
     <ClInclude Include="demo\MoreOrLess.hpp" />
     <ClInclude Include="demo\NEAT.hpp" />
+    <ClInclude Include="demo\NEET.hpp" />
     <ClInclude Include="ext\imgui\imconfig.h" />
     <ClInclude Include="ext\imgui\imgui.h" />
     <ClInclude Include="ext\imgui\imgui_impl_dx11.h" />
@@ -39,7 +40,6 @@
   <ItemGroup>
     <ClCompile Include="demo\Application.cpp" />
     <ClCompile Include="demo\main.cpp" />
-    <ClCompile Include="demo\NEAT.cpp" />
     <ClCompile Include="ext\imgui\imgui.cpp" />
     <ClCompile Include="ext\imgui\imgui_demo.cpp" />
     <ClCompile Include="ext\imgui\imgui_draw.cpp" />
