--- a/BrainFramework.vcxproj.filters
+++ b/BrainFramework.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="demo\NEET.hpp">
       <Filter>demo</Filter>
     </ClInclude>
+    <ClInclude Include="demo\Blackjack.hpp">
+      <Filter>demo</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="demo\Application.cpp">
