--- a/BrainFramework.vcxproj.filters
+++ b/BrainFramework.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="demo\NEETL.hpp">
       <Filter>demo</Filter>
     </ClInclude>
+    <ClInclude Include="src\AgentInterface.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="demo\Application.cpp">
